<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_loja_jogos_id"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.lojajogos.LojaJogosFragment"
    android:background="@drawable/gradienthome">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView_jogos"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>