<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/loja_home"
        android:title="@string/title_bottom_navigation_loja"
        android:icon="@drawable/ic_baseline_store_24"
        app:showAsAction="always"/>

    <item android:id="@+id/carrinho_home"
        android:title="@string/title_bottom_navigation_carrinho"
        android:icon="@drawable/ic_baseline_shopping_cart_24"
        app:showAsAction="always"/>

    <item android:id="@+id/amigos_home"
        android:title="@string/title_bottom_navigation_amigos"
        android:icon="@drawable/ic_baseline_people_alt_24"
        app:showAsAction="always"/>
</menu>