<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/carrinho_compras_id"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradienthome"
    tools:context=".ui.fragments.carrinho.CarrinhoFragment"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <TextView
        android:id="@+id/carrinho_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/msgCarrinho"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:textSize="20dp"
        android:textColor="@color/white"></TextView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView_carrinho"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/carrinho_tv"/>

</androidx.constraintlayout.widget.ConstraintLayout>